fixed bullet points not showing up on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -106,6 +106,10 @@
     h1 {
       font-size: 2.6rem;
     }
+
+    .bullets {
+      list-style-type: circle;
+    }
   }
   
   /*===================
@@ -431,5 +435,10 @@
   
     .scroll-container {
       display: none;
+    }
+
+    .bullets {
+      list-style-type: circle;
+      list-style: inside;
     }
   }
